client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@import "../../../styles/algaehCssVariables.scss";
.leftNavCntr {
  margin-top: 0;
  z-index: 9999;
  position: fixed;
  background: #292929;
  height: 100%;
  width: 215px;
  overflow: auto;
}
.hptl-phase1-sideMenuBar {
  .sideMenu-header {
    color: white;
    background: #292929;
    padding-top: 50px;
  }
  .side-menu-title {
    padding: 5px 0;
    line-height: 35px;
    border-bottom: 1px solid #000;
    cursor: pointer;
    font-size: 0.9rem;
  }
  .side-menu-title:hover {
    background: rgb(0, 188, 176);
  }
  .side-menu-arrow {
    margin-top: 5px;
  }
  .side-menu-downIcon {
    padding-top: 5px;
    padding-right: 5px;
    cursor: pointer;
  }
  ul.tree-structure-menu {
    margin: 0;
    padding: 0;
    width: 100%;
    li {
      padding: 6px 5px;
      margin: 0;
      font-size: 0.8rem;
      border-bottom: 1px dotted #4e4e4e;
      text-transform: uppercase;
      cursor: pointer;
      color: #dcac66;
      i {
        margin-right: 12px;
        margin-left: 14px;
      }
    }
    li:hover {
      background: rgb(0, 188, 176);
      color: #fff;
    }
  }
  .sub-menu-option {
    background: #000000;
  }

  .close-menu {
    padding-top: 5px;
    cursor: pointer;
    color: #fff;
  }

  .menuBar-title {
    display: flex;
    padding: 5px;
    font-size: 20px;
    height: 49px;
    background: #000;
    position: fixed;
    width: 215px;
    z-index: 9;
    border-bottom: 1px solid #3e3e3e;
  }
  .sideBarClose {
    width: 25px;
    height: 25px;
    padding: 0px;
    margin: 0;
    position: absolute;
    display: block;
    right: 13px;
    top: 13px;
    color: #fff;
    border: 1px solid #fff;
    text-align: center;
    border-radius: 6px;
  }
  .sideBarClose:hover {
    color: #00bcb0;
    border-radius: 6px;
    border: 1px solid #00bcb0;
    cursor: pointer;
  }
  svg {
    height: 23px;
  }
}

.hptl-phase1-footer {
  .main {
    background-color: #000000 !important;
    border-top: 1px solid #0000;
    padding: 10px;
    height: 40px;
    width: 100%;
    position: fixed;
    left: 0;
    bottom: 0;
  }

  .app_bar {
    background: #000000;
  }
}

.screenDisplay {
  display: flex;
  width: 100%;

  h5 {
    line-height: 46px;
    padding: 0;
    margin: 0;
    font-size: 1.1rem;
    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
  }
  span:first-child {
    padding-top: 0px;
  }
  span:last-child {
    padding-top: 7px;
    float: right;
    position: absolute;
    margin-left: 88%;
  }
}

